Fix overlap

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -212,5 +212,11 @@ h3 small.when {
 
   .temp-chart .graph-wrapper {
     height: 130px;
+
+    .message {
+      height: 130px;
+      padding-top: 40px;
+    }
   }
+
 }
